@@ -15,10 +15,9 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.bpmn.event.timer;
-
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashSet;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 import org.junit.jupiter.api.AfterEach;
@@ -132,7 +131,7 @@ class UpdateDuedateOnRecurringTimerTest {
     assertThat(ClockUtil.getCurrentTime()).isAfter(job3.getDuedate());
     assertThat(managementService.createJobQuery().count()).isZero();
     // no duplicates
-    assertThat(new HashSet<String>(Arrays.asList(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
+    assertThat(new HashSet<String>(List.of(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
     // job1 is due after 45 minutes (30 + 15 offset)
     assertThat(job1.getDuedate().getTime()).isEqualTo(t0.getTime() + minutes(45));
     // job2 is due 25 minutes after job1 (keeps offset due to cascade=true and
@@ -207,7 +206,7 @@ class UpdateDuedateOnRecurringTimerTest {
 
     // then
     // no duplicate jobs
-    assertThat(new HashSet<String>(Arrays.asList(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
+    assertThat(new HashSet<String>(List.of(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
     // job1 is due at t=15
     assertThat(job1.getDuedate().getTime()).isEqualTo(t0.getTime() + minutes(15));
     // job2 is due 40 minutes after job1 (keeps offset due to cascade=true at
@@ -251,7 +250,7 @@ class UpdateDuedateOnRecurringTimerTest {
 
     // then
     // no duplicate jobs
-    assertThat(new HashSet<String>(Arrays.asList(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
+    assertThat(new HashSet<String>(List.of(job1.getId(), job2.getId(), job3.getId()))).hasSize(3);
     // job1 is due at t=15
     assertThat(job1.getDuedate().getTime()).isEqualTo(t0.getTime() + minutes(15));
     // job2 is due 15 minutes after job1 (ignores offset due to cascade=false at
