@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.test.bpmn.tasklistener;
 
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -108,8 +107,8 @@ class TaskListenerTest extends AbstractTaskListenerTest {
             .userTask()
             .operatonTaskListenerClass(TaskListener.EVENTNAME_CREATE, CompletingTaskListener.class.getName())
             .name("userTask")
-            .operatonCandidateUsers(Arrays.asList("users1", "user2"))
-            .operatonCandidateGroups(Arrays.asList("group1", "group2"))
+            .operatonCandidateUsers(List.of("users1", "user2"))
+            .operatonCandidateGroups(List.of("group1", "group2"))
             .endEvent().done();
 
     testRule.deploy(modelInstance);
