@@ -17,7 +17,6 @@
 package org.operaton.bpm.example.invoice;
 
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -147,7 +146,7 @@ class InvoiceTestCase {
         .file(invoiceInputStream)
         .mimeType("application/pdf")
         .create())
-      .putValue("approverGroups", Arrays.asList("sales", "accounting"));
+      .putValue("approverGroups", List.of("sales", "accounting"));
 
     ProcessInstance pi = runtimeService.createProcessInstanceByKey("invoice")
       .setVariables(variables)
