@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.bpmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.bpmn.impl.instance.EventDefinitionRef;
 
@@ -33,7 +32,7 @@ public class CatchEventTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(DataOutput.class),
       new ChildElementAssumption(DataOutputAssociation.class),
       new ChildElementAssumption(OutputSet.class, 0, 1),
@@ -44,7 +43,7 @@ public class CatchEventTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("parallelMultiple", false, false, false)
     );
   }
