@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.cmmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.cmmn.MultiplicityEnum;
 import org.operaton.bpm.model.cmmn.impl.CmmnModelConstants;
@@ -35,14 +34,14 @@ public class CaseFileItemTest extends CmmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new ChildElementAssumption(Children.class, 0, 1)
         );
   }
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new AttributeAssumption("name"),
           new AttributeAssumption("multiplicity", false, false, MultiplicityEnum.Unspecified),
           new AttributeAssumption("definitionRef"),
