@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.cmmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.operaton.bpm.model.cmmn.impl.CmmnModelConstants;
 
@@ -34,14 +33,14 @@ public class PlanItemOnPartTest extends CmmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new ChildElementAssumption(PlanItemTransitionStandardEvent.class, 0, 1)
         );
   }
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
           new AttributeAssumption("sourceRef"),
           new AttributeAssumption(CmmnModelConstants.CMMN10_NS, "sentryRef"),
           new AttributeAssumption("exitCriterionRef")
