@@ -15,9 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.dmn.instance;
-
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class OutputClauseTest extends DmnModelElementInstanceTest {
 
@@ -28,7 +27,7 @@ public class OutputClauseTest extends DmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(OutputValues.class, 0, 1),
       new ChildElementAssumption(DefaultOutputEntry.class, 0, 1)
     );
@@ -36,7 +35,7 @@ public class OutputClauseTest extends DmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new AttributeAssumption("name"),
       new AttributeAssumption("typeRef")
     );
